# bna-lambdas

./: Cargo.toml
.github/workflows/: lambda-deployment-production.yml  lambda-deployment-staging.yml  lambdas.yml
lambdas/: Cargo.toml
lambdas/src/: bna-fargate-run.rs  bna-prepare-destination.rs  bna-save-results.rs  bna-teardown.rs  lib.rs  scorecard.rs
