[workspace]
members = ["lambdas"]
resolver = "2"

[workspace.dependencies]
async-std = "1.13.2"
aws_lambda_events = "1.0.1"
aws-config = "1.8.11"
aws-sdk-ecs = "1.107.1"
aws-sdk-s3 = "1.115.0"
aws-sdk-sqs = "1.90.0"
aws-smithy-types-convert = "0.60.10"
bnaclient = { git = "https://github.com/PeopleForBikes/bna-api", version = "1.1.0" }
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke", rev = "334d247" }
chrono = "0.4.42"
clap = "4.5.32"
color-eyre = "0.6.2"
csv = "1.4.0"
dotenv = "0.15.0"
fontdb = "0.23.0"
heck = "0.5.0"
http = "1.4.0"
image = "0.25.9"
lambda_http = "1.0.1"
lambda_runtime = "1.0.1"
libflate = "2.2.1"
lopdf = "0.38.0"
minijinja = "2.13.0"
nats = "0.25.0"
once_cell = "1.21.3"
openssl = "0.10.75"
regex = "1.12.2"
reqwest = "0.12.24"
rstest = "0.26.1"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
sea-orm = "1.1.0"
sea-orm-migration = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_plain = "1.0.2"
serde_with = "3.16.1"
simple-error = "0.3.2"
slug = "0.1.6"
svg2pdf = "0.13.0"
test-log = "0.2.19"
thiserror = "2.0.17"
tokio = "1.48.0"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = "0.6.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
trauma = "2.1.0"
url = "2.5.7"
usvg = "0.45.1"
uuid = "1.19.0"
walkdir = "2.4.0"
zip = "6.0.0"
