[workspace]
members = ["lambdas"]
resolver = "2"

[workspace.dependencies]
async-std = "1.13.2"
aws_lambda_events = "1.0.3"
aws-config = "1.8.13"
aws-sdk-ecs = "1.110.0"
aws-sdk-s3 = "1.122.0"
aws-sdk-sqs = "1.92.0"
aws-smithy-types-convert = "0.60.12"
bnaclient = { git = "https://github.com/PeopleForBikes/bna-api", version = "1.4.1" }
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke", rev = "148cdc1" }
chrono = "0.4.42"
clap = "4.5.32"
color-eyre = "0.6.2"
csv = "1.4.0"
dotenv = "0.15.0"
fontdb = "0.23.0"
heck = "0.5.0"
http = "1.4.0"
image = "0.25.9"
lambda_http = "1.0.2"
lambda_runtime = "1.0.2"
libflate = "2.2.1"
lopdf = "0.39.0"
minijinja = "2.15.1"
nats = "0.25.0"
once_cell = "1.21.3"
openssl = "0.10.75"
regex = "1.12.2"
reqwest = "0.13.1"
rstest = "0.26.1"
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
sea-orm = "1.1.0"
sea-orm-migration = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_plain = "1.0.2"
serde_with = "3.16.1"
simple-error = "0.3.2"
slug = "0.1.6"
svg2pdf = "0.13.0"
test-log = "0.2.19"
thiserror = "2.0.18"
tokio = "1.49.0"
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = "0.6.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trauma = "2.1.0"
url = "2.5.8"
usvg = "0.46.0"
uuid = "1.20.0"
walkdir = "2.4.0"
zip = "7.2.0"
