[workspace]
members = ["lambdas"]
resolver = "2"

[workspace.dependencies]
async-std = "1.13.2"
aws_lambda_events = "1.1.3"
aws-config = "1.8.16"
aws-sdk-ecs = "1.124.0"
aws-sdk-s3 = "1.132.0"
aws-sdk-sqs = "1.98.0"
aws-smithy-types-convert = "0.60.14"
bnaclient = { git = "https://github.com/PeopleForBikes/bna-api", rev = "65d97e6" }
bnacore = { git = "https://github.com/PeopleForBikes/brokenspoke", rev = "148cdc1" }
chrono = "0.4.44"
clap = "4.6.1"
color-eyre = "0.6.5"
csv = "1.4.0"
dotenvy = "0.15.7"
fontdb = "0.23.0"
heck = "0.5.0"
http = "1.4.0"
image = "0.25.10"
lambda_http = "1.1.3"
lambda_runtime = "1.1.2"
libflate = "2.3.0"
lopdf = "0.40.0"
minijinja = "2.19.0"
nats = "0.26.0"
once_cell = "1.21.4"
openssl = "0.10.79"
regex = "1.12.3"
reqwest = "0.13.3"
rstest = "0.26.1"
rust_decimal = "1.42.0"
rust_decimal_macros = "1.40.0"
sea-orm = "1.1.0"
sea-orm-migration = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_plain = "1.0.2"
serde_with = "3.20.0"
simple-error = "0.3.2"
slug = "0.1.6"
svg2pdf = "0.13.0"
test-log = "0.2.20"
thiserror = "2.0.18"
tokio = "1.52.2"
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = "0.6.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
trauma = "2.1.0"
url = "2.5.8"
usvg = "0.47.0"
uuid = "1.23.1"
walkdir = "2.4.0"
zip = "8.6.0"
